Added Bcrypt for hash/salt

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/KCMS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jBCrypt-0.4.zip=C:\\Users\\teacher\\Downloads\\jBCrypt-0.4.zip
 file.reference.servlet-api.jar=C:\\Program Files\\Apache Software Foundation\\Tomcat\\lib\\servlet-api.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -38,7 +39,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.servlet-api.jar}
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.jBCrypt-0.4.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
